# ArchipelagoGD2

./: CMakeLists.txt  README.md  mod.json
src/: APUtils.cpp  APUtils.hpp  ConnectPopup.cpp  LevelSelectLayerHook.cpp  LoadingLayerHook.cpp  PlayLayerHook.cpp  PortalLogic.cpp  main.cpp
